added demo of about to demo html enigma dark OR-478

--- a/content_builder/src/html/themes/enigma/dark/OrganizationDemoAboutPage.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationDemoAboutPage.html
@@ -74,7 +74,7 @@
                                     <div class="classes.roster_item_name_container">
                                         <span class="classes.roster_name">Bobby Jones</span>
                                         <span class="classes.roster_divider">|</span>
-                                        <span class="classes.roster_name">ThunderDude</span>
+                                        <span class="classes.roster_name">CEO</span>
                                     </div>
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text"></span>
@@ -101,7 +101,7 @@
                                     <div class="classes.roster_item_name_container">
                                         <span class="classes.roster_name">Bobby Jones</span>
                                         <span class="classes.roster_divider">|</span>
-                                        <span class="classes.roster_name">ThunderDude</span>
+                                        <span class="classes.roster_name">Manager</span>
                                     </div>
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
@@ -128,7 +128,7 @@
                                     <div class="classes.roster_item_name_container">
                                         <span class="classes.roster_name">Bobby Jones</span>
                                         <span class="classes.roster_divider">|</span>
-                                        <span class="classes.roster_name">ThunderDude</span>
+                                        <span class="classes.roster_name">Support</span>
                                     </div>
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
@@ -155,7 +155,7 @@
                                     <div class="classes.roster_item_name_container">
                                         <span class="classes.roster_name">Bobby Jones</span>
                                         <span class="classes.roster_divider">|</span>
-                                        <span class="classes.roster_name">ThunderDude</span>
+                                        <span class="classes.roster_name">Sandwich Maker</span>
                                     </div>
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
