removed roster height for now

--- a/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
@@ -40,7 +40,7 @@
                                 <div id="theme_about_modal">
                     
                                 </div>
-                                <div data-component-value="{this.props.rosterContent}" id="roster_component" style="min-height:100vh;">
+                                <div data-component-value="{this.props.rosterContent}" id="roster_component">
                                 
                                  </div>
                                 </div>
