initial WIP push OR-501

--- a/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
@@ -57,6 +57,7 @@
                         <div class="classes.obliviot_org_menu_container">
                             <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_obliviot_item">Login</div></a>
                             <a><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_item">Store</div></a>
+                            <a><div id="menu_about" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_dark_item">Sponsors</div></a>
                             <a><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_item">About</div></a>
                             <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}" class="classes.org_menu_obliviot_item">Home</div></a>
                         </div>
