--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -55,17 +55,17 @@
                 <a class="item">
                     <div class="classes.menu_item">
                         <div class="classes.menu_item_icon">
-                            <i class="block layout icon"></i>
+                            <i class="users icon"></i>
                         </div>
                         <div class="classes.menu_item_label">
-                            User LIst
+                            Members
                         </div>
                     </div>
                 </a>
                 <a class="item" data-component-props="onClick={(e)=>{this.props.handleMainMenuClick('collaborators', e);}}">
                     <div class="classes.menu_item">
                         <div class="classes.menu_item_icon">
-                            <i class="block layout icon"></i>
+                            <i class="user circle icon"></i>
                         </div>
                         <div class="classes.menu_item_label">
                             Collaborators
