--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="item">
+                <a class="item" data-component-props="onClick={(e)=>{this.props.handleMainMenuClick('members', e);}}">
                     <div class="classes.menu_item">
                         <div class="classes.menu_item_icon">
                             <i class="users icon"></i>
