Fix for sponsor backend

--- a/content_builder/src/html/themes/admin/OrganizationAdminSponserComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminSponserComponent.html
@@ -39,7 +39,7 @@
                             <img class="classes.admin_sponser_image" data-component-props="src={this.props.sponsor_image1}" src="http://api.originbeta.net/sponsor/sponsor-logo1.png" />
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.sponser_name1_value} onChange={(e)=>{this.props.handleChange('sponser_name1_value', e);}}"  type="text" placeholder="Sponsor Name">
+                            <input data-component-props="value={this.props.sponsor_name1_value} onChange={(e)=>{this.props.handleChange('sponsor_name1_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
                             <input data-component-props="value={this.props.http_link1_value} onChange={(e)=>{this.props.handleChange('http_link1_value', e);}}"  type="text" placeholder="Sponsor link">
@@ -60,7 +60,7 @@
                             <img class="classes.admin_sponser_image" data-component-props="src={this.props.sponsor_image2}" src="http://api.originbeta.net/sponsor/sponsor-logo1.png" />
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.sponser_name2_value} onChange={(e)=>{this.props.handleChange('sponser_name2_value', e);}}"  type="text" placeholder="Sponsor Name">
+                            <input data-component-props="value={this.props.sponsor_name2_value} onChange={(e)=>{this.props.handleChange('sponsor_name2_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
                                 <input data-component-props="value={this.props.http_link2_value} onChange={(e)=>{this.props.handleChange('http_link2_value', e);}}"  type="text" placeholder="Sponsor link">
@@ -81,7 +81,7 @@
                             <img class="classes.admin_sponser_image" data-component-props="src={this.props.sponsor_image3}" src="http://api.originbeta.net/sponsor/sponsor-logo1.png" />
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.sponser_name3_value} onChange={(e)=>{this.props.handleChange('sponser_name3_value', e);}}"  type="text" placeholder="Sponsor Name">
+                            <input data-component-props="value={this.props.sponsor_name3_value} onChange={(e)=>{this.props.handleChange('sponsor_name3_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
                             <input data-component-props="value={this.props.http_link3_value} onChange={(e)=>{this.props.handleChange('http_link3_value', e);}}"  type="text" placeholder="Sponsor link">
@@ -102,7 +102,7 @@
                             <img class="classes.admin_sponser_image" data-component-props="src={this.props.sponsor_image4}" src="http://api.originbeta.net/sponsor/sponsor-logo1.png" />
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.sponser_name4_value} onChange={(e)=>{this.props.handleChange('sponser_name4_value', e);}}"  type="text" placeholder="Sponsor Name">
+                            <input data-component-props="value={this.props.sponsor_name4_value} onChange={(e)=>{this.props.handleChange('sponsor_name4_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
                             <input data-component-props="value={this.props.http_link4_value} onChange={(e)=>{this.props.handleChange('http_link4_value', e);}}"  type="text" placeholder="Sponsor link">
