fixed bug with images in sponsor list

--- a/content_builder/src/html/themes/enigma/dark/OrganizationSponsersItemComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationSponsersItemComponent.html
@@ -27,7 +27,7 @@
                 <div class="ui stackable two column grid">
                     <div class="three wide column">
                         <div class="classes.sponser_item_img_container">
-                            <img class="classes.sponser_item_img" src={this.props.sponser_image} />
+                            <img class="classes.sponser_item_img" data-component-props="src={this.props.sponser_image}" />
                         </div>
                     </div>
                     <div class="thirteen wide column">
