--- a/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
@@ -24,7 +24,7 @@
    <body>
         <div data-component-name="obliviot_OrganizationNavComponent" class="classes.obliviotNavBG">
             <div class="ui stackable three column grid">
-                <div class="column">
+                <div class="six wide column">
                     <div class="classes.nav_left">
                         <div class="classes.obliviot_social_menu_container">
                             <div class="classes.obliviot_social_menu_item" data-component-value="{this.props.social_link1}">
@@ -45,14 +45,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="column">
+                <div class="four wide column">
                     <div class="classes.obliviot_nav_center">
                         <div class="classes.obliviot_nav_header">
                             <img id="nav_img" class="classes.obliviot_nav_img" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/adminTemplate/1518192959017g5034r0j085fewubx1or.png" alt=""/>
                         </div>
                     </div>
                 </div>
-                <div class="column">
+                <div class="six wide column">
                     <div class="classes.obliviot_nav_right">
                         <div class="classes.obliviot_org_menu_container">
                             <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_obliviot_item">Login</div></a>
