fixed issues with contactNumber and instagramURL in individuals

--- a/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualBasicInfoComponent.html
@@ -65,6 +65,9 @@
                     </table>
                     <div class="classes.individual_accomplishment_container">
                         <h2 class="classes.individual_accomplishment_header">Accomplishments</h2>
+                        <div style="padding: 10px;">
+                            <p data-component-value="{this.props.accomplishments}" id="basic_accomplishments"></p>
+                        </div>
                     </div>
                 </div>
             </div>                
