--- a/content_builder/src/html/themes/individual/IndividualYoutubeStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualYoutubeStatsComponent.html
@@ -25,7 +25,7 @@
    <body>
         <div data-component-name="IndividualYoutubeStatsComponent" class="">
             <div class="classes.individual_social_box">
-                    <h2 class="classes.individual_social_header">
+                    <h2 class="classes.individual_social_header" data-component-props="onClick={()=>{this.props.handle_redirect('youtube')}}">
                             YouTube Stats
                     </h2>
                     <div id="channel_name" class="classes.individual_social_content">
