OR-536 twitter portion hooked up

--- a/content_builder/src/html/themes/individual/IndividualSocialStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualSocialStatsComponent.html
@@ -25,7 +25,7 @@
    <body>
         <div data-component-name="IndividualSocialStatsComponent" class="">
             <div class="classes.individual_social_box">
-                <h2 class="classes.individual_social_header" data-component-props="onClick={()=>{this.props.handle_redirect('youtube')}}">
+                <h2 class="classes.individual_social_header" data-component-props="onClick={()=>{this.props.handle_redirect('twitch')}}">
                     Twitch Stats
                 </h2>
                 <div class="classes.individual_social_content" data-component-value="{this.props.twitch_stats}">
