--- a/content_builder/src/html/themes/individual/IndividualInstagramStatsComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualInstagramStatsComponent.html
@@ -25,7 +25,7 @@
    <body>
         <div data-component-name="IndividualInstagramStatsComponent" class="">
             <div class="classes.individual_social_box">
-                <h2 class="classes.individual_social_header">
+                <h2 class="classes.individual_social_header" data-component-props="onClick={()=>{this.props.handle_redirect('instagram')}}">
                     Instagram Stats
                 </h2>
                 <div class="classes.individual_social_content" data-component-value="{this.props.instagram_stats}">
