--- a/content_builder/src/html/themes/admin/OrganizationAdminSponserComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminSponserComponent.html
@@ -42,7 +42,7 @@
                             <input data-component-props="value={this.props.sponsor_name1_value} onChange={(e)=>{this.props.handleChange('sponsor_name1_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.http_link1_value} onChange={(e)=>{this.props.handleChange('http_link1_value', e);}}"  type="text" placeholder="Sponsor link">
+                            <input data-component-props="value={this.props.http_link1_value} onChange={(e)=>{this.props.handleChange('http_link1_value', e);}}"  type="text" placeholder="Sponsor link (Valid URL)">
                         </div>
                         <div class="ui fluid input">
                             <textarea data-component-props="value={this.props.sponsor_desc1_value} onChange={(e)=>{this.props.handleChange('sponsor_desc1_value', e);}}" class="classes.admin_sponser_description" placeholder="Sponsor description ..."></textarea>
@@ -63,7 +63,7 @@
                             <input data-component-props="value={this.props.sponsor_name2_value} onChange={(e)=>{this.props.handleChange('sponsor_name2_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
-                                <input data-component-props="value={this.props.http_link2_value} onChange={(e)=>{this.props.handleChange('http_link2_value', e);}}"  type="text" placeholder="Sponsor link">
+                                <input data-component-props="value={this.props.http_link2_value} onChange={(e)=>{this.props.handleChange('http_link2_value', e);}}"  type="text" placeholder="Sponsor link (Valid URL)">
                         </div>
                         <div class="ui fluid input">
                             <textarea data-component-props="value={this.props.sponsor_desc2_value} onChange={(e)=>{this.props.handleChange('sponsor_desc2_value', e);}}" class="classes.admin_sponser_description" placeholder="Sponsor description ..."></textarea>
@@ -84,7 +84,7 @@
                             <input data-component-props="value={this.props.sponsor_name3_value} onChange={(e)=>{this.props.handleChange('sponsor_name3_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.http_link3_value} onChange={(e)=>{this.props.handleChange('http_link3_value', e);}}"  type="text" placeholder="Sponsor link">
+                            <input data-component-props="value={this.props.http_link3_value} onChange={(e)=>{this.props.handleChange('http_link3_value', e);}}"  type="text" placeholder="Sponsor link (Valid URL)">
                         </div>
                         <div class="ui fluid input">
                             <textarea data-component-props="value={this.props.sponsor_desc3_value} onChange={(e)=>{this.props.handleChange('sponsor_desc3_value', e);}}" class="classes.admin_sponser_description" placeholder="Sponsor description ..."></textarea>
@@ -105,7 +105,7 @@
                             <input data-component-props="value={this.props.sponsor_name4_value} onChange={(e)=>{this.props.handleChange('sponsor_name4_value', e);}}"  type="text" placeholder="Sponsor Name">
                         </div>
                         <div class="ui fluid input">
-                            <input data-component-props="value={this.props.http_link4_value} onChange={(e)=>{this.props.handleChange('http_link4_value', e);}}"  type="text" placeholder="Sponsor link">
+                            <input data-component-props="value={this.props.http_link4_value} onChange={(e)=>{this.props.handleChange('http_link4_value', e);}}"  type="text" placeholder="Sponsor link (Valid URL)">
                         </div>
                         <div class="ui fluid input">
                             <textarea data-component-props="value={this.props.sponsor_desc4_value} onChange={(e)=>{this.props.handleChange('sponsor_desc4_value', e);}}" class="classes.admin_sponser_description" placeholder="Sponsor description ..."></textarea>
