OR-539 sponser add forgotten password button to login component

--- a/content_builder/src/html/themes/base/LoginComponent.html
+++ b/content_builder/src/html/themes/base/LoginComponent.html
@@ -52,6 +52,9 @@
                                 <div data-component-value="{this.props.loginAccountButton}">
                                     <div class="ui fluid large teal submit button" style="background: #0a9ab4;font-size:18px;margin-top:40px;">Login</div>
                                 </div>
+                                <div data-component-value="{this.props.forgotPasswordButton}">
+                                    <div class="ui fluid large teal submit button" style="background: #0a9ab4;font-size:18px;margin-top:40px;">Forgot Password?</div>
+                                </div>
                                 <div class="classes.submit_divider"></div>
                                 <div class="classes.submit_or">OR</div>
                                 <div class="classes.social_box_outer">
