--- a/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="classes.admin_social_box_divider"></div>
                     <div class="ui fluid input">
-                        <input data-component-props="value={this.props.twitch_value} onChange={(e)=>{this.props.handleChange('twitch_value', e);}}"  type="text" placeholder="Twitch Channel Name">
+                        <input data-component-props="value={this.props.twitch_value} onChange={(e)=>{this.props.handleChange('twitch_value', e);}}"  type="text" placeholder="Twitch link">
                     </div>
                 </div>
                 <div class="classes.admin_social_box_inner">
