--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -56,7 +56,7 @@
                         <textarea data-component-props="value={this.props.about} onChange={(e)=>{this.props.handleChange('about', e);}}" class="classes.modal_individual_edit_about" rows="10" placeholder="About"></textarea>
                         <textarea data-component-props="value={this.props.accomplishments} onChange={(e)=>{this.props.handleChange('accomplishments', e);}}" class="classes.modal_individual_edit_about" rows="10" placeholder="Accomplishments"></textarea>
                         <input data-component-props="value={this.props.twitchUrl} onChange={(e)=>{this.props.handleChange('twitchUrl', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitch Handle not full URL" />
-                        <input data-component-props="value={this.props.youtubeChannel} onChange={(e)=>{this.props.handleChange('youtubeChannel', e);}}" class="classes.modal_individual_edit_input" placeholder="Youtube User ID not full URL" />
+                        <input data-component-props="value={this.props.youtubeChannel} onChange={(e)=>{this.props.handleChange('youtubeChannel', e);}}" class="classes.modal_individual_edit_input" placeholder="Youtube Channel ID not full URL" />
                         <input data-component-props="value={this.props.instagramLink} onChange={(e)=>{this.props.handleChange('instagramLink', e);}}" class="classes.modal_individual_edit_input" placeholder="Instagram Username not full URL" />
                         <div data-component-props="onClick={this.props.closeModal}" class="classes.modal_individual_submit_button_container">
                             <div class="classes.modal_individual_submit_button">Cancel</div>
