--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -48,15 +48,25 @@
                         </div>
                     </div>
                     <div id="modal_individual_edit_body" class="classes.modal_individual_edit_body">
+                        <div class="classes.individual_label">First Name</div>
                         <input data-component-props="value={this.props.firstName} onChange={(e)=>{this.props.handleChange('firstName', e);}}" class="classes.modal_individual_edit_input" placeholder="First Name" />
+                        <div class="classes.individual_label">Last Name</div>
                         <input data-component-props="value={this.props.lastName} onChange={(e)=>{this.props.handleChange('lastName', e);}}" class="classes.modal_individual_edit_input" placeholder="Last Name" />
+                        <div class="classes.individual_label">Username</div>
                         <input data-component-props="value={this.props.username} onChange={(e)=>{this.props.handleChange('username', e);}}" class="classes.modal_individual_edit_input" placeholder="Username" />
+                        <div class="classes.individual_label">Twitter Handle</div>
                         <input data-component-props="value={this.props.twitterHandle} onChange={(e)=>{this.props.handleChange('twitterHandle', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitter Handle not full URL" />
+                        <div class="classes.individual_label">Contact Number</div>
                         <input data-component-props="value={this.props.contactNumber} onChange={(e)=>{this.props.handleChange('contactNumber', e);}}" class="classes.modal_individual_edit_input" placeholder="Contact Number" />
+                        <div class="classes.individual_label">About</div>
                         <textarea data-component-props="value={this.props.about} onChange={(e)=>{this.props.handleChange('about', e);}}" class="classes.modal_individual_edit_about" rows="10" placeholder="About"></textarea>
+                        <div class="classes.individual_label">Accomplishments</div>
                         <textarea data-component-props="value={this.props.accomplishments} onChange={(e)=>{this.props.handleChange('accomplishments', e);}}" class="classes.modal_individual_edit_about" rows="10" placeholder="Accomplishments"></textarea>
+                        <div class="classes.individual_label">Twitch Handle</div>
                         <input data-component-props="value={this.props.twitchUrl} onChange={(e)=>{this.props.handleChange('twitchUrl', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitch Handle not full URL" />
+                        <div class="classes.individual_label">YouTube Channel ID</div>
                         <input data-component-props="value={this.props.youtubeChannel} onChange={(e)=>{this.props.handleChange('youtubeChannel', e);}}" class="classes.modal_individual_edit_input" placeholder="Youtube Channel ID not full URL" />
+                        <div class="classes.individual_label">Instagram Username</div>
                         <input data-component-props="value={this.props.instagramLink} onChange={(e)=>{this.props.handleChange('instagramLink', e);}}" class="classes.modal_individual_edit_input" placeholder="Instagram Username not full URL" />
                         <div data-component-props="onClick={this.props.closeModal}" class="classes.modal_individual_submit_button_container">
                             <div class="classes.modal_individual_submit_button">Cancel</div>
