--- a/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
@@ -198,6 +198,68 @@
                         </div>
                     </div>
                 </div>
+                <div class="classes.obliviot_dark_section_control_container">
+                    <div class="classes.obliviot_dark_section_divider"></div>
+                    <div class="classes.obliviot_dark_section_title">MATCHES</div>
+                    <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
+                </div>
+                <div id="matches_container" class="ui stackable three column grid">
+                    <div class="column">
+                        <div class="classes.obliviot_dark_match_container">
+                            <div class="classes.obliviot_dark_match_vs_container">
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
+                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
+                            </div>
+                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                            <div class="classes.obliviot_dark_corner_win"></div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="classes.obliviot_dark_match_container">
+                            <div class="classes.obliviot_dark_match_vs_container">
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
+                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
+                            </div>
+                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                            <div class="classes.obliviot_dark_corner_win"></div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="classes.obliviot_dark_match_container">
+                            <div class="classes.obliviot_dark_match_vs_container">
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
+                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
+                            </div>
+                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                            <div class="classes.obliviot_dark_corner_win"></div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="classes.obliviot_dark_match_container">
+                            <div class="classes.obliviot_dark_match_vs_container">
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
+                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
+                            </div>
+                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                            <div class="classes.obliviot_dark_corner_lose"></div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="classes.obliviot_dark_match_container">
+                            <div class="classes.obliviot_dark_match_vs_container">
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
+                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
+                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
+                            </div>
+                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
+                            <div class="classes.obliviot_dark_corner_lose"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="classes.orgFooter">
                 <p class="classes.orgFooterText">© Origin. All rights reserved.</p>
