initial framework for obliviot theme including footer

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
@@ -261,8 +261,8 @@
                     </div>
                 </div>
             </div>
-            <div class="classes.orgFooter">
-                <p class="classes.orgFooterText">© Origin. All rights reserved.</p>
+            <div class="classes.obliviot_orgFooter">
+                <p class="classes.obliviot_orgFooterText">© Origin. All rights reserved.</p>
             </div>
         </div>
    </body>
