added title and subtitle to stitch

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
@@ -138,10 +138,20 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container"></div>
+                            <div class="classes.obliviot_dark_twitch_feed_container">
+                                <div class="classes.obliviot_dark_twitch_title_container">
+                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
+                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container"></div>
+                            <div class="classes.obliviot_dark_twitch_feed_container">
+                                <div class="classes.obliviot_dark_twitch_title_container">
+                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
+                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
