added live and offline states to stitchfor obliviot theme

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationDemoPage.html
@@ -135,13 +135,9 @@
                                     <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
                                     <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="classes.obliviot_dark_twitch_feed_container">
-                                <div class="classes.obliviot_dark_twitch_title_container">
-                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
-                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
+                                <div class="classes.obliviot_dark_user_online">
+                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
+                                    <div class="classes.obliviot_dark_user_online_text">live</div>
                                 </div>
                             </div>
                         </div>
@@ -150,6 +146,22 @@
                                 <div class="classes.obliviot_dark_twitch_title_container">
                                     <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
                                     <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
+                                </div>
+                                <div class="classes.obliviot_dark_user_offline">
+                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
+                                    <div class="classes.obliviot_dark_user_online_text">offline</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="classes.obliviot_dark_twitch_feed_container">
+                                <div class="classes.obliviot_dark_twitch_title_container">
+                                    <div class="classes.obliviot_dark_twitch_title">STREAMZOR</div>
+                                    <div class="classes.obliviot_dark_twitch_subtitle">playerunknown's battlegrounds</div>
+                                </div>
+                                <div class="classes.obliviot_dark_user_offline">
+                                    <img src="../images/molly.png" class="classes.obliviot_dark_user_image" />
+                                    <div class="classes.obliviot_dark_user_online_text">offline</div>
                                 </div>
                             </div>
                         </div>
