--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -136,48 +136,7 @@
                                 <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                             </div>
                             <div id="news_div">
-                                <div class="classes.obliviot_dark_news_container">
-                                    <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-                                    <div class="classes.obliviot_main_news_content_container">
-                                        <div>
-                                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                            </div>
-                                        </div>
-                                        <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                            <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                        </div>
-                                        <div class="classes.obliviot_dark_news_decor"></div>
-                                    </div>
-                                </div>
-                                <div class="classes.obliviot_dark_news_container">
-                                    <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-                                    <div class="classes.obliviot_main_news_content_container">
-                                        <div>
-                                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                            </div>
-                                        </div>
-                                        <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                            <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                        </div>
-                                        <div class="classes.obliviot_dark_news_decor"></div>
-                                    </div>
-                                </div>
-                                <div class="classes.obliviot_dark_news_container">
-                                    <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-                                    <div class="classes.obliviot_main_news_content_container">
-                                        <div>
-                                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
-                                            </div>
-                                        </div>
-                                        <div style="width: 100%;height: 68px; overflow-y: hidden;" data-component-value="{this.props.blog_content}">
-                                            <p class="classes.obliviot_dark_news_body" >We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
-                                        </div>
-                                        <div class="classes.obliviot_dark_news_decor"></div>
-                                    </div>
-                                </div>
+                                <div data-component-value="{this.props.newsContent}">News</div>
                             </div>
                         </div>
                         <div class="six wide column">
@@ -187,10 +146,7 @@
                                 <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                             </div>
                             <div id="video_div">
-                                <div class="classes.obliviot_dark_video_container"></div>
-                                <div class="classes.obliviot_dark_video_container"></div>
-                                <div class="classes.obliviot_dark_video_container"></div>
-                                <div class="classes.obliviot_dark_video_container"></div>
+                                <div data-component-value="{this.props.videoContent}">News</div>
                             </div>
                         </div>
                     </div>
