added matches component for dark obliviot theme

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -157,61 +157,7 @@
                     <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                 </div>
                 <div id="matches_container" class="ui stackable three column grid">
-                    <div class="column">
-                        <div class="classes.obliviot_dark_match_container">
-                            <div class="classes.obliviot_dark_match_vs_container">
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
-                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
-                            </div>
-                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
-                            <div class="classes.obliviot_dark_corner_win"></div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="classes.obliviot_dark_match_container">
-                            <div class="classes.obliviot_dark_match_vs_container">
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
-                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
-                            </div>
-                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
-                            <div class="classes.obliviot_dark_corner_win"></div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="classes.obliviot_dark_match_container">
-                            <div class="classes.obliviot_dark_match_vs_container">
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
-                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
-                            </div>
-                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
-                            <div class="classes.obliviot_dark_corner_win"></div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="classes.obliviot_dark_match_container">
-                            <div class="classes.obliviot_dark_match_vs_container">
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
-                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
-                            </div>
-                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
-                            <div class="classes.obliviot_dark_corner_lose"></div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="classes.obliviot_dark_match_container">
-                            <div class="classes.obliviot_dark_match_vs_container">
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_us.jpg" />
-                                <div class="classes.obliviot_dark_match_vs_score">10-8</div>
-                                <img class="classes.obliviot_dark_match_vs_image" src="../images/vs_test_them.jpeg" />
-                            </div>
-                            <div class="classes.obliviot_dark_match_vs_date">22 AUG 2018</div>
-                            <div class="classes.obliviot_dark_corner_lose"></div>
-                        </div>
-                    </div>
+                    <div data-component-value="{this.props.matchesContent}">Matches</div>
                 </div>
                 <div id="bottom_nav" class="classes.obliviot_dark_bottom_nav">
                     <div class="ui stackable five column grid">
