--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -157,7 +157,7 @@
                     <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                 </div>
                 <div id="matches_container" class="ui stackable three column grid">
-                    <div data-component-value="{this.props.matchesContent}">Matches</div>
+                    <div data-component-value="{this.props.recent_matches}">Matches</div>
                 </div>
                 <div id="bottom_nav" class="classes.obliviot_dark_bottom_nav">
                     <div class="ui stackable five column grid">
