--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -89,6 +89,7 @@
                 </div>
                 <div class="classes.obliviot_dark_twitch_container">
                     <div class="ui stackable three column grid">
+                        <div data-component-value="{this.props.stitchContent}">Stitch</div>
                         <div class="column">
                             <div class="classes.obliviot_dark_twitch_feed_container">
                                 <div class="classes.obliviot_dark_twitch_title_container">
